@@ -1,3 +1,6 @@
+8 April 2014: Wouter
+	- nsd-control addzone reports if zone already exists.
+
 7 April 2014: Wouter
 	- Fix #571: unused variable and incompatible pointer warnings when
 	  compiled on a system without INET6.
